# EISMaster

./: .gitignore  1C放电完后.txt  Ag_EIS_OCV.txt  EISMaster.spec  LICENSE  README.md  UPLOAD_NOTES.md  launch_eismaster.py  pyproject.toml
matlab_bridge/: eismaster_batch_drt.m
src/eismaster/: __init__.py  app.py  exporters.py  matlab_drt.py  models.py
src/eismaster/analysis/: __init__.py  batch.py  circuits.py  diagnostics.py  fitting.py  native_drt.py  preprocessing.py  quality.py  segmentation.py
src/eismaster/io/: __init__.py  chi.py
src/eismaster/ui/: main_window.py  range_slider.py  theme.py
tests/: _tmp_main_window_broken_decoded_full.py  _tmp_main_window_broken_decoded_preview.py  test_batch_auto.py  test_batch_runtime.py  test_circuits.py  test_exports.py  test_fitting_algorithms.py  test_matlab_drt.py  test_native_drt.py  test_parsers.py  test_preprocessing.py  test_ui_smoke.py
tests/_tmp_exports_runtime/: single_csv_fit_overlay.csv  single_csv_fit_report.csv  single_csv_raw_plot.csv  single_csv_rs_rct.csv  single_txt_fit_overlay.txt  single_txt_fit_report.txt  single_txt_raw_plot.txt  single_txt_rs_rct.txt  single_xlsx.xlsx
tests/_tmp_exports_runtime2/: single_csv_fit_overlay.csv  single_csv_fit_report.csv  single_csv_raw_plot.csv  single_csv_rs_rct.csv
tests/_tmp_manual_smoke/: batch_bundle_fit_overlay.csv  batch_bundle_raw_plot.csv  batch_bundle_rs_rct.csv  single_bundle_fit_overlay.csv  single_bundle_fit_report.csv  single_bundle_rs_rct.csv
tests/_tmp_stage_check/: bundle_fit_overlay.csv  bundle_raw_plot.csv  bundle_rs_rct.csv
(+3 files in other folders)
